--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,5 +1,5 @@
 .header {
-  max-width: 880px;
+  width: 880px;
   margin: 0 auto;
   padding: 45px 0 37px;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
