--- a/src/blocks/root/root.css
+++ b/src/blocks/root/root.css
@@ -1,7 +1,8 @@
 .root {
   min-width: 320px;
   min-height: 100vh;
-  
+  display: flex;
+  flex-direction: column;
   background-color: #000;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   -webkit-font-smoothing: antialiased;
