--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -3,6 +3,9 @@
   margin: 0 auto;
   padding: 45px 0 37px;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 1024px) {
