--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
 
+@import url(./blocks/sign-link/sign-link.css);
+
 @import url(./blocks/content/content.css);
 
 @import url(./blocks/profile/profile.css);
