feature создать адаптивное меню

--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -2,5 +2,6 @@
   .header__logo {
     max-width: min(calc(100% * (103.74 / 320)), 142px);
     padding-left: calc(100% * (27/320));
+    margin-top: 28px;
   }
 }
