--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -4,6 +4,7 @@
   padding: 45px 0 37px;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
   display: flex;
+  flex-wrap: wrap-reverse;
   align-items: center;
   justify-content: space-between;
 }
@@ -17,6 +18,6 @@
 @media screen and (max-width: 570px) {
   .header {
     width: 100%;
-    padding: 28px 0 28px;
+    padding: 0 0 31px;
   }
 }
