--- a/src/blocks/menu/__email/menu__email.css
+++ b/src/blocks/menu/__email/menu__email.css
@@ -1,12 +1,13 @@
-.profile-sign-status__email {
+.menu__email {
     margin: 0 24px 0 0;
     padding: 0;
     font-size: 18px;
     line-height: 1.21;
+    color: #fff;
 }
 
 @media screen and (max-width: 570px) {
-    .profile-sign-status__email {
+    .menu__email {
         margin: 40px 0 18px;
     }
 }
