--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,13 @@
 
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__menu-container/header__menu-container.css);
+@import url(./blocks/header/__menu-dropdown/header__menu-dropdown.css);
+@import url(./blocks/header/__button/header__button.css);
 
-@import url(./blocks/profile-status/profile-status.css);
-@import url(./blocks/profile-status/__email/profile-status__email.css);
-
-@import url(./blocks/profile-sign-status/profile-sign-status.css);
-@import url(./blocks/profile-sign-status/__email/profile-sign-status__email.css);
-@import url(./blocks/profile-sign-status/__sign-link/profile-sign-status__sign-link.css);
-
-@import url(./blocks/sign-link/sign-link.css);
+@import url(./blocks/menu/menu.css);
+@import url(./blocks/menu/__email/menu__email.css);
+@import url(./blocks/menu/__link/menu__link.css);
 
 @import url(./blocks/content/content.css);
 
