feature добавить затемнение при наведении курсора

--- a/src/blocks/header/__button/header__button.css
+++ b/src/blocks/header/__button/header__button.css
@@ -4,4 +4,10 @@
     border: none;
     background-color: black;
     background-repeat: no-repeat;
+    transition: opacity 0.3s ease;
+}
+
+.header__button:hover {
+    opacity: 0.6;
+    cursor: pointer;
 }
