--- a/src/blocks/sign-form/__link/sign-form__link.css
+++ b/src/blocks/sign-form/__link/sign-form__link.css
@@ -1,4 +1,10 @@
 .sign-form__link {
     text-decoration: none;
     color: white;
+    transition: opacity 0.3s ease;
+}
+
+.sign-form__link:hover {
+    opacity: 0.6;
+    cursor: pointer;
 }
