--- a/src/blocks/sign-form/__submit/sign-form__submit.css
+++ b/src/blocks/sign-form/__submit/sign-form__submit.css
@@ -5,4 +5,10 @@
     margin-bottom: 15px;
     font-size: 18px;
     line-height: 1.21;
+    transition: opacity 0.3s ease;
+}
+
+.sign-form__submit:hover {
+    opacity: 0.85;
+    cursor: pointer;
 }
