--- a/src/blocks/menu/__link/menu__link.css
+++ b/src/blocks/menu/__link/menu__link.css
@@ -2,7 +2,13 @@
     text-decoration: none;
     font-size: 18px;
     line-height: 1.21;
-    color: #fff
+    color: #fff;
+    transition: opacity 0.3s ease;
+}
+
+.menu__link:hover {
+    opacity: 0.6;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 570px) {
