--- a/src/blocks/sign-form/__submit/sign-form__submit.css
+++ b/src/blocks/sign-form/__submit/sign-form__submit.css
@@ -12,3 +12,10 @@
     opacity: 0.85;
     cursor: pointer;
 }
+
+@media screen and (max-width: 570px) {
+    .sign-form__submit {
+        margin-bottom: 15px;
+        font-size: 16px;
+    }
+}
