--- a/src/blocks/sign-form/__title/sign-form__title.css
+++ b/src/blocks/sign-form/__title/sign-form__title.css
@@ -5,3 +5,10 @@
     font-weight: 900;
     line-height: 1.2;
 }
+
+@media screen and (max-width: 570px) {
+    .sign-form__title {
+        margin: 40px 0;
+        font-size: 20px;
+    }
+}
