--- a/src/blocks/sign-up-status/__subtitle/sign-up-status__subtitle.css
+++ b/src/blocks/sign-up-status/__subtitle/sign-up-status__subtitle.css
@@ -3,12 +3,13 @@
     line-height: 1.21;
     font-weight: 900;
     text-align: center;
-    width: 100%;
+    max-width: 358px;
     margin: 0 auto;
 }
 
 @media screen and (max-width: 570px) {
     .sign-up-status__subtitle {
         font-size: 20px;
+        max-width: 280px;
     }
 }
