feature создать компонент Popup и смонтировать в существующие компоненты

--- a/src/blocks/sign-up-status/sign-up-status.css
+++ b/src/blocks/sign-up-status/sign-up-status.css
@@ -3,7 +3,10 @@
     width: 430px;
     height: 330px;
     border-radius: 10px;
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (max-width: 570px) {
