hotfix править адаптивность

--- a/src/blocks/form/form.css
+++ b/src/blocks/form/form.css
@@ -2,11 +2,12 @@
   background-color: white;
   border-radius: 10px;
   padding: 34px 36px 37px;
-  max-width: 358px;
+  width: 358px;
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 570px) {
   .form {
     padding: 25px 22px;
+    width: min(calc(238/320 * 100vw), 358px);
   }
 }
