--- a/src/blocks/form/__input/form__input.css
+++ b/src/blocks/form/__input/form__input.css
@@ -2,6 +2,7 @@
   width: 100%;
   padding: 9px 0;
   border: 0;
+  background-color: inherit;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   margin-bottom: 22px;
   font-size: 14px;
