--- a/src/blocks/sign-form/__submit/sign-form__submit.css
+++ b/src/blocks/sign-form/__submit/sign-form__submit.css
@@ -6,11 +6,26 @@
     font-size: 18px;
     line-height: 1.21;
     transition: opacity 0.3s ease;
+    width: 100%;
+    background-color: white;
 }
 
 .sign-form__submit:hover {
     opacity: 0.85;
     cursor: pointer;
+}
+
+.sign-form__submit:disabled {
+    box-sizing: border-box;
+    background-color: rgba(255, 255, 255, 0);
+    border: 1px solid #000;
+    color: #000;
+    opacity: .2;
+}
+
+.sign-form__submit:disabled:hover {
+    cursor: not-allowed;
+    opacity: .2;
 }
 
 @media screen and (max-width: 570px) {
