--- a/src/blocks/sign-form/sign-form.css
+++ b/src/blocks/sign-form/sign-form.css
@@ -1,8 +1,10 @@
 .sign-form {
     color: white;
+    background-color: inherit;
     display: flex;
     flex: 1 1 auto;
     flex-direction: column;
+    align-items: center;
     min-width: 358px;
     margin: auto;
 }
