--- a/src/blocks/sign-form/__title/sign-form__title.css
+++ b/src/blocks/sign-form/__title/sign-form__title.css
@@ -1,5 +1,5 @@
 .sign-form__title {
-    margin: 60px 0 50px;
+    margin: 0 0 50px;
     text-align: center;
     font-size: 24px;
     font-weight: 900;
