--- a/src/blocks/sign-form/sign-form.css
+++ b/src/blocks/sign-form/sign-form.css
@@ -1,12 +1,13 @@
 .sign-form {
     color: white;
     background-color: inherit;
+    padding: 60px 10px 15px;
     display: flex;
-    flex: 1 1 auto;
+    /*flex: 1 1 auto;*/
     flex-direction: column;
     align-items: center;
     min-width: 358px;
-    margin: auto;
+    margin: 0 auto;
 }
 
 @media screen and (max-width: 570px) {
