--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -4,7 +4,7 @@
   padding-bottom: 60px;
   flex: 1 0 auto;
   display: flex;
-  align-items: end;
+  align-items: flex-end;
 }
 
 @media screen and (max-width: 1024px) {
